Pagination is ready for filter and saerch